kubernetes/hello-world-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  namespace: hello-world-app
  labels:
    app: hello-world-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
      - name: hello-world-app
        image: tomaszkluczkowski/hello-world-app:1.0.1
        ports:
          - containerPort: 5000
