kubernetes/hello-world-app/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app-service
  namespace: hello-world-app
spec:
  selector:
    app: hello-world-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
