kubernetes/hello-world-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-app-ingress
  namespace: hello-world-app
spec:
  ingressClassName: nginx
  rules:
  - host: "hello-world-app.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-world-app-service
            port:
              number: 5000
